==> hunkhand/ZhongWei/Source/BSP/PCap.c <==
#include "BSP.h"
#include <intrinsics.h>
#define SET_SCK             GPIO_SetBits(GPIOB, GPIO_Pin_3);
#define CLR_SCK             GPIO_ResetBits(GPIOB, GPIO_Pin_3);
#define SET_MOSI            GPIO_SetBits(GPIOB, GPIO_Pin_5);
#define CLR_MOSI            GPIO_ResetBits(GPIOB, GPIO_Pin_5);
#define SET_SSN             GPIO_SetBits(GPIOA, GPIO_Pin_15);
#define CLR_SSN             GPIO_ResetBits(GPIOA, GPIO_Pin_15);
#define READ_MISO			GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_4)

void SPI_Enable(void)
{
    GPIO_ResetBits(GPIOA, GPIO_Pin_15);

    for(unsigned long i = 0; i < 7; i++)    
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
    __no_operation();
}

void SPI_Disable(void)
{	
    GPIO_SetBits(GPIOA, GPIO_Pin_15);
    __no_operation();
    __no_operation();
    __no_operation();
}

void PCap_SPI_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    /* Enable SCK, MOSI, MISO and NSS GPIO clocks */
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB, ENABLE);
    
    /* SPI SCK pin configuration */
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_Level_3;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    /* SPI  MOSI pin configuration */
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_Level_3;
    GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_5;
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    /* SPI MISO pin configuration */
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_Level_3;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    /* software Chip Select pin Configuration*/
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_Level_3;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
}

void PCap_Init(void)
{
    unsigned short wrSRAMCnt = 0;
    
    PCap_SPI_Init();
    Delay_Ms(1);
    
	PCap_Reset();				//上电复位
	Delay_Ms(1);
    
    do{
        //before this, wdog is no initiate, so don't feed the wdog in here
        ulWritePCAPXramErr = PCap_WR_SRAM();
        if(0 == ulWritePCAPXramErr)
            break;
        wrSRAMCnt++;
        Delay_Us(10);
    }
    while(wrSRAMCnt < 10);
    Delay_Us(10);

    PCap_Reg_Config();			//配置寄存器
    Delay_Us(10);

    PCap_Enable();				//启动PCap芯片
    Delay_Ms(1);

    PCap_PTL_Reset();			//部分上电复位（SRAM和配置寄存器值不变）
    Delay_Ms(1);

    PCap_MEASURE(); 					//测量当前点
    Delay_Ms(1);

	//Capture_TimerInit();
}

void resetPcap(void)
{
    static unsigned char ucResetCnt = 0;
    unsigned short wrSRAMCnt = 0;

    if(++ucResetCnt >= 3)
    {
        ucResetCnt = 0;
        //reboot
        NVIC_SystemReset(); //define in ..\IAR Systems\Embedded Workbench 7.0\arm\CMSIS\Include\core_cm0.h
        while(1)
        {;}
    }
    else
    {
        //disable timer interrupt
        TIM_ITConfig(TIM3, TIM_IT_Update, DISABLE);
        TIM_Cmd(TIM3, DISABLE);
        TIM_ClearITPendingBit(TIM3, TIM_IT_Update);
    
        //Disable pcap, if SPI is work normally, the action will quickly reset pcap,and shut down the convert
        PCap_Reset();
        
        //initiate pcap
    
        PCap_SPI_Init();
        Delay_Ms(1);
        
    	PCap_Reset();				//上电复位
    	Delay_Ms(1);
        
        do{
#if IWDG_EN > 0
            IWDG_ReloadCounter();
#endif
            if(0 == PCap_WR_SRAM())
                break;
            wrSRAMCnt++;
            Delay_Us(10);
        }
        while(wrSRAMCnt < 10);
        Delay_Us(10);
        
    	PCap_Reg_Config();			                                //配置寄存器
    	Delay_Us(10);

#if IWDG_EN > 0
        IWDG_ReloadCounter();
#endif

    	PCap_Enable();				                                //启动PCap芯片
    	Delay_Ms(1);

    	PCap_PTL_Reset();			                                //部分上电复位（SRAM和配置寄存器值不变）
        Delay_Ms(1);

    	PCap_MEASURE(); 					                //测量当前点
    }
}
